--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-12-sm" id="buttonarea"></div>
+            <div class="btn-toolbar col-12-sm" id="buttonarea"></div>
         </div>
 
 
