--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
             <div class="btn-toolbar col-12-sm" id="buttonarea"></div>
         </div>
 
+        <div class="row">
+            <div class="col-6">
+                <div id="gifs-here"></div>
+            </div>
+        </div>
+            
+        </div>
+
 
 
 
