--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         </div>
 
         <div class="row">
-            <div class="col-6">
-                <div id="gifs-here"></div>
+                <div class="gifs-here"></div>
             </div>
         </div>
             
