--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <form class="form-container">
                         <div class="col-3-sm">
                                 <h6>Add a TV show</h6>
-                                <input type="text" class="form-control textbox" placeholder="">
-                                <button type="submit" class="btn btn-primary btn-sm mb-1 mt-2">Submit</button>
+                                <input type="text" class="form-control textbox" id="tv-input">
+                                <button type="submit" id="addTvShow" class="btn btn-primary btn-sm mb-1 mt-2">Submit</button>
                         </div>
 
                     </form>
