--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Oswald" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Giphy Search</title>
 </head>
 <body>
 
     <div class="container-fluid">
+        <h1 id="title">The Ultimate TV Show GIF page</h1>
+        <h6>Click a TV Show. Click any GIF to animate.</h6>
         <div class="row">
             <div class="btn-toolbar col-12-sm" id="buttonarea"></div>
         </div>
@@ -21,9 +24,9 @@
                 
                     <form class="form-container">
                         <div class="col-3-sm">
-                                <h6>Add a TV show</h6>
+                                <h6>Add a TV show:</h6>
                                 <input type="text" class="form-control textbox" id="tv-input">
-                                <button type="submit" id="addTvShow" class="btn btn-primary btn-sm mb-1 mt-2">Submit</button>
+                                <button type="submit" id="addTvShow" class="btn btn-sm btn-primary mb-1 mt-3">Submit</button>
                         </div>
 
                     </form>
