--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700|Oswald" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Giphy Search</title>
+    <title>Ultimate TV GIFs</title>
 </head>
 <body>
 
