--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700|Oswald" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="assets/images/favicon1.ico" rel="icon" type="image/x-icon" />
     <title>Ultimate TV GIFs</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
                     <form class="form-container">
                         <div class="col-3-sm">
                                 <h6>Add a TV show:</h6>
-                                <input type="text" class="form-control textbox" id="tv-input">
+                                <input type="text" class="form-control textbox" id="tv-input" placeholder="e.g. Fresh Prince of Bel-Air">
                                 <button type="submit" id="addTvShow" class="btn btn-sm btn-primary mb-1 mt-3">Submit</button>
                         </div>
 
