--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="container-fluid">
         <h1 id="title">The Ultimate TV Show GIF page</h1>
-        <h6>Click a TV Show. Click any GIF to animate.</h6>
+        <h6 id="subtitle">Click a TV Show. Click any GIF to animate.</h6>
         <div class="row">
             <div class="btn-toolbar col-12-sm" id="buttonarea"></div>
         </div>
