--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
 
     <div class="container-fluid">
+        <div class="page-header">
         <h1 id="title">The Ultimate TV Show GIF page</h1>
         <h6 id="subtitle">Click a TV Show. Click any GIF to animate.</h6>
+        </div>
         <div class="row">
             <div class="btn-toolbar col-12-sm" id="buttonarea"></div>
         </div>
